Annotate TextureData fields as Nullable